# PyPI-ukhotides

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
src/ukhotides/: __init__.py  const.py  dataclasses.py  enums.py  exceptions.py
tests/: requirements.txt  test_ukhotides.py
tests/resources/: height.json  heights.json  station.json  stations.json  tidal_events.json  tidal_events_partial.json
ukhotides/: __init__.py  const.py  dataclasses.py  enums.py  exceptions.py
