[tool.poetry]
name = "ukhotides"
version = "1.1.2"
description = "Python library for interfacing with the UKHO Admiralty Tidal API"
authors = ["Ian Byrne <ian.byrne@burnsie.com.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">= 3.10.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
aioresponses = "^0.7.7"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
